--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ a{ text-decoration:none; }
   <div class="title">FREE ACCESS</div>
   <div class="subtitle">Public • Open • No Login Required</div>
 
-  <a href="https://amplify-video-tv.github.io/126bTyMs1.mp4" target="_blank">
+  <a href="https://amplify-video-tv.github.io/pXNYp2ba1.mp4" target="_blank">
     <button class="btn">🎬 WATCH VIDEO</button>
   </a>
 
