--- a/index.html
+++ b/index.html
@@ -138,16 +138,8 @@ a{ text-decoration:none; }
     <button class="btn">🎬 WATCH VIDEO</button>
   </a>
 
-<script>
-  atOptions = {
-    'key' : 'a56d9957870f34de53762968bb2255c5',
-    'format' : 'iframe',
-    'height' : 50,
-    'width' : 320,
-    'params' : {}
-  };
-</script>
-<script src="https://braceslinear.com/a56d9957870f34de53762968bb2255c5/invoke.js"></script>
+<script async="async" data-cfasync="false" src="https://braceslinear.com/d3e082d534e1581e0f78d3cfe456f0d9/invoke.js"></script>
+<div id="container-d3e082d534e1581e0f78d3cfe456f0d9"></div>
 </div>
 
 </body>
